# CrewAI-Ollama

./: Llama2ModelFile  README.md  benefits_of_water.md  llama.sh  ollama_test.py  pyproject.toml
src/devbi/: crew.py  main.py
src/devbi/config/: agents.yaml  tasks.yaml
src/devbi/tools/: custom_tool.py
